# school-websites

./: .gitignore  CNAME  README.md  index.19d66b69.css  index.19d66b69.css.map  index.49463092.css  index.49463092.css.map  index.7c468229.js  index.7c468229.js.map  index.7f4ff0e5.js  index.7f4ff0e5.js.map  index.d7a47110.js  index.d7a47110.js.map  index.dd9d6569.js  index.dd9d6569.js.map  index.html  src.00549b7c.js  src.00549b7c.js.map  src.1ea5354e.js  src.1ea5354e.js.map  src.2628e59b.js  src.2628e59b.js.map  src.79ec23c2.js  src.79ec23c2.js.map  src.915d699b.js  src.915d699b.js.map  src.e21f1f0a.js  src.e21f1f0a.js.map  style.2402aca7.css  style.2402aca7.css.map  style.29dcd528.css  style.29dcd528.css.map  style.87ca89e9.css  style.87ca89e9.css.map  style.e05666af.css  style.e05666af.css.map  style.f1391584.css  style.f1391584.css.map
.github/workflows/: build.yml
backend/: Cargo.toml  Dockerfile
backend/json/english/startups-in-2021/: citations.json  defences.json  definitions.json  further-reading.json  getting-started.json  going-public.json  index.json  stakeholders.json
backend/json/history/: bill-gates.json
backend/src/: main.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: index.ts
frontend/src/styles/: style.scss
